# freestack

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
schema/: compute2.capnp  identity3.capnp  types.capnp
src/: identity3.rs  lib.rs  main.rs
src/kvstore/: etcd.rs  mod.rs
